--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -16,6 +16,7 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+  margin: 0;
 }
 
 .statLabel {
@@ -29,6 +30,16 @@
 
 .title {
   text-align: center;
-  padding: 0;
+  padding-bottom: 16px;
+  margin: 0;
   text-transform: uppercase;
+}
+
+.statistics {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px;
+  border: solid 1px grey;
+  width: fit-content;
 }
