--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 /* @import-normalize; */
+
+li {
+  list-style: none;
+}
+
 bring in normalize.css styles body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
