--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@ li {
   list-style: none;
 }
 
+p,
+ul {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+}
+
 bring in normalize.css styles body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
